--- a/Project1/css/project1.css
+++ b/Project1/css/project1.css
@@ -6,13 +6,22 @@ body {
 	background: #151931;
     text-align: center;
     padding: 30px 0;
+    width: 100%;
+    
  }
+
 
 .selected {
 	color: white;
 	border-bottom: 2px solid #c2002e;
 	padding-bottom: 3px;
 
+}
+
+.headers {
+	background: #151931;
+    text-align: center;
+    padding: 30px 0;
 }
 
 
@@ -38,7 +47,7 @@ a:hover{
 }
 
 #h1 {
-	padding-top: 80px;
+	
 	color: #ffffff;
 	font-family: 'PT Serif', serif;
 	font-size: 68px;
@@ -203,6 +212,7 @@ label {
 	width: 100%;
 	display:inline-block;
 	padding-bottom: 80px;
+	
 }
 
 .content{
